# chroncile.saas.platform

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .pnp.cjs  .prettierignore  .vercelignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  doppler.yaml  eslint.config.mjs  package-lock.json  package.json  render.yaml  skills-lock.json  tsconfig.base.json  turbo.json  vercel.json
backend/: .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  env.example  fly.development.toml  fly.ephemeral.toml  fly.production.toml  fly.staging.toml  fly.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: error.rs  escalation.rs  feature_access.rs  lib.rs  runtime_config.rs  saas_state.rs  state.rs  workos_user.rs
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: jwt.rs  lib.rs  middleware.rs  password.rs  types.rs  workos.rs  workos_jwt.rs
backend/crates/chronicle_core/: Cargo.toml
backend/crates/chronicle_core/src/: connector.rs  entity_ref.rs  error.rs  event.rs  ids.rs  lib.rs  link.rs  media.rs  query.rs  time_range.rs
backend/crates/chronicle_embed/: Cargo.toml
backend/crates/chronicle_embed/src/: lib.rs  model.rs  text_extractor.rs
backend/crates/chronicle_gorgias/: Cargo.toml
backend/crates/chronicle_gorgias/src/: lib.rs
backend/crates/chronicle_ingest/: Cargo.toml
backend/crates/chronicle_ingest/src/: batcher.rs  lib.rs  schema_detector.rs
backend/crates/chronicle_interner/: Cargo.toml
backend/crates/chronicle_interner/src/: lib.rs
backend/crates/chronicle_link/: Cargo.toml
backend/crates/chronicle_link/src/: extractor.rs  lib.rs
backend/crates/chronicle_mcp/: Cargo.toml
backend/crates/chronicle_mcp/src/: auth.rs  data_access.rs  error.rs  eval.rs  eval_anthropic.rs  eval_context_dump.rs  eval_fragmented_tools.rs  eval_seed.rs  eval_transport.rs  lib.rs  resources.rs  server.rs
backend/crates/chronicle_mcp/tests/: anthropic_live_eval.rs  anthropic_reasoning_comparison.rs  anthropic_tool_surface_benchmark.rs  eval_scenarios.rs  in_process.rs  transports.rs
backend/crates/chronicle_nango/: Cargo.toml
backend/crates/chronicle_nango/src/: client.rs  error.rs  lib.rs  types.rs
backend/crates/chronicle_orchestrator/: Cargo.toml
backend/crates/chronicle_orchestrator/src/: agent_runner.rs  error.rs  job.rs  judges.rs  lib.rs  plan.rs  script_agent.rs  trial.rs  verifier.rs
backend/crates/chronicle_orchestrator/tests/: end_to_end.rs
backend/crates/chronicle_py/: Cargo.toml  pyproject.toml
backend/crates/chronicle_py/src/: lib.rs
backend/crates/chronicle_query/: Cargo.toml
backend/crates/chronicle_query/src/: lib.rs
backend/crates/chronicle_sandbox/: Cargo.toml
backend/crates/chronicle_sandbox/src/: capabilities.rs  error.rs  factory.rs  lib.rs  traits.rs  types.rs
backend/crates/chronicle_sdk/: Cargo.toml
backend/crates/chronicle_sdk/src/: client.rs  lib.rs
backend/crates/chronicle_server/: Cargo.toml
backend/crates/chronicle_server/src/: lib.rs  state.rs
backend/crates/chronicle_server/tests/: golden_principles.rs  rest_api.rs
backend/crates/chronicle_store/: Cargo.toml
backend/crates/chronicle_store/examples/: helix_load_from_postgres.rs
backend/crates/chronicle_store/migrations/: 001_initial.sql  002_drop_fk_for_archival.sql  002_entity_refs_jsonb_index.sql  003_row_level_security.sql
backend/crates/chronicle_store/src/: arrow_export.rs  engine.rs  lib.rs  subscriptions.rs  tenant_guard.rs  traits.rs
backend/crates/chronicle_store/tests/: bench_read_performance.rs  bench_write_overhead.rs  benchmark_all_backends.rs  benchmark_batch_scaling.rs  cross_backend_stress.rs  helix_backend.rs  helix_stress.rs  hybrid_backend.rs  kurrent_backend.rs  memory_backend.rs  postgres_backend.rs  subscription_tests.rs  tenant_isolation.rs
backend/crates/chronicle_stripe/: Cargo.toml
backend/crates/chronicle_stripe/src/: lib.rs
backend/crates/chronicle_test_fixtures/: Cargo.toml
backend/crates/chronicle_test_fixtures/src/: dataset.rs  factories.rs  lib.rs  trait_tests.rs
backend/crates/chronicle_tuid/: Cargo.toml
backend/crates/chronicle_tuid/src/: lib.rs
backend/crates/chronicle_viewer_common/: Cargo.toml
backend/crates/chronicle_viewer_common/examples/: chronicle_detail_demo.rs
backend/crates/chronicle_viewer_common/src/: entity_ref_chips.rs  event_envelope.rs  filter_state.rs  lib.rs  links_list.rs  payload_json.rs
backend/crates/chronicle_web/: Cargo.toml
backend/crates/chronicle_web/src/: convert.rs  error.rs  lib.rs  types.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: agents.rs  agents.rs.tmp  api_types.rs  backtests.rs  chronicle.rs  connections.rs  datasets.rs  datasets.rs.tmp  error.rs  feature_access.rs  ids.rs  lib.rs  ordering.rs  saas.rs  sandbox_graph.rs  stream.rs  stream_manager.rs  test_utils.rs  timeline.rs
backend/crates/domain/tests/: ordering_tests.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: conversion.rs  lib.rs
backend/crates/integrations/: Cargo.toml
backend/crates/interfaces/: Cargo.toml
backend/crates/mock-connector/: Cargo.toml
backend/crates/pipedream-connect/: Cargo.toml
backend/crates/source-intercom/: Cargo.toml
backend/crates/sources-core/: Cargo.toml
backend/crates/sources-registry/: Cargo.toml
backend/crates/timeline-core/: Cargo.toml
backend/crates/timeline-widget/: Cargo.toml
backend/crates/ui/: Cargo.toml
backend/deploy/: Dockerfile  docker-compose.yml  fly.development.toml  fly.ephemeral.toml  fly.production.toml  fly.staging.toml
backend/helix/event-graph/: .gitignore  helix.toml
backend/migrations/: 002_create_saas_schema.sql  003_add_oauth_support.sql  003_create_feature_access.sql  004_add_user_roles.sql  005_create_invitation_table.sql  006_create_password_reset_token_table.sql  007_create_sandbox_tables.sql  008_add_sandbox_runtime_state.sql  009_rename_pipedream_fields_to_integration.sql  010_workos_users.sql  011_drop_legacy_password_columns.sql  012_tenant_memberships.sql  013_create_backtest_runtime.sql  015_drop_password_reset_token.sql
(+839 files in other folders)
