[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/interfaces",
    "crates/infra",
    "crates/mock-connector",
    "crates/sources-core",
    "crates/sources-registry",
    "crates/source-mock-stripe",
    "crates/api",
    "crates/auth",
    "crates/integrations",
    "crates/pipedream-connect",
    "crates/ui",
    "crates/timeline-core",
    "crates/timeline-widget",
    "bin/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
chronicle-domain = { path = "crates/domain" }
chronicle-interfaces = { path = "crates/interfaces" }
chronicle-infra = { path = "crates/infra" }
chronicle-mock-connector = { path = "crates/mock-connector" }
chronicle-sources-core = { path = "crates/sources-core" }
chronicle-sources-registry = { path = "crates/sources-registry" }
chronicle-source-mock-stripe = { path = "crates/source-mock-stripe" }
chronicle-api = { path = "crates/api" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1.1", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Concurrency
parking_lot = "0.12"
dashmap = "5"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Type generation
ts-rs = { version = "10", features = ["chrono-impl", "serde-json-impl"] }

# Testing
proptest = "1.4"
wiremock = "0.6"
assert_json_diff = "2"
rstest = "0.18"
serial_test = "3"

# Cryptography
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
aes-gcm = "0.10"

# Auth
bcrypt = "0.16"
jsonwebtoken = "9"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# IDs
cuid2 = "0.1"

# Random number generation
rand = "0.8"

chronicle-auth = { path = "crates/auth" }
chronicle-integrations = { path = "crates/integrations" }
pipedream-connect = { path = "crates/pipedream-connect" }
