[workspace]
resolver = "2"
members = [
    "crates/chronicle_nango",
    "crates/chronicle_mcp",
    "crates/domain",
    "crates/interfaces",
    "crates/infra",
    "crates/chronicle_tuid",
    "crates/chronicle_interner",
    "crates/chronicle_core",
    "crates/chronicle_gorgias",
    "crates/chronicle_stripe",
    "crates/chronicle_web",
    "crates/chronicle_store",
    "crates/chronicle_ingest",
    "crates/chronicle_query",
    "crates/chronicle_link",
    "crates/chronicle_embed",
    "crates/chronicle_server",
    "crates/chronicle_sdk",
    "crates/chronicle_py",
    "crates/chronicle_viewer_common",
    "crates/chronicle_test_fixtures",
    "crates/mock-connector",
    "crates/sources-core",
    "crates/sources-registry",
    "crates/api",
    "crates/auth",
    "crates/integrations",
    "crates/pipedream-connect",
    "crates/ui",
    "crates/timeline-core",
    "crates/timeline-widget",
    "bin/chronicle-mcp",
    "bin/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.81"

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
bool_to_int_with_if = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cloned_ref_to_slice_refs = "allow"
default_trait_access = "allow"
derivable_impls = "allow"
doc_markdown = "allow"
drain_collect = "allow"
elidable_lifetime_names = "allow"
field_reassign_with_default = "allow"
format_push_string = "allow"
items_after_statements = "allow"
manual_contains = "allow"
manual_let_else = "allow"
manual_midpoint = "allow"
map_unwrap_or = "allow"
return_self_not_must_use = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_continue = "allow"
needless_lifetimes = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
needless_range_loop = "allow"
redundant_closure_for_method_calls = "allow"
ref_as_ptr = "allow"
ref_option = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
single_match_else = "allow"
trim_split_whitespace = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unnecessary_literal_bound = "allow"
unnecessary_map_or = "allow"
unreadable_literal = "allow"
ignored_unit_patterns = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
wildcard_imports = "allow"

[workspace.dependencies]
# Internal crates
chronicle_domain = { path = "crates/domain" }
chronicle_interfaces = { path = "crates/interfaces" }
chronicle_infra = { path = "crates/infra" }
chronicle_mock_connector = { path = "crates/mock-connector" }
chronicle_sources_core = { path = "crates/sources-core" }
chronicle_sources_registry = { path = "crates/sources-registry" }
chronicle_api = { path = "crates/api" }
chronicle_core = { path = "crates/chronicle_core" }
chronicle_gorgias = { path = "crates/chronicle_gorgias" }
chronicle_stripe = { path = "crates/chronicle_stripe" }
chronicle_web = { path = "crates/chronicle_web" }
chronicle_store = { path = "crates/chronicle_store" }
chronicle_ingest = { path = "crates/chronicle_ingest" }
chronicle_query = { path = "crates/chronicle_query" }
chronicle_link = { path = "crates/chronicle_link" }
chronicle_embed = { path = "crates/chronicle_embed" }
chronicle_sdk = { path = "crates/chronicle_sdk" }
chronicle_py = { path = "crates/chronicle_py" }
chronicle_viewer_common = { path = "crates/chronicle_viewer_common" }
chronicle_mcp = { path = "crates/chronicle_mcp" }
chronicle_backend = { path = "bin/server" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1.1", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Concurrency
parking_lot = "0.12"
dashmap = "5"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = { version = "0.46.2", features = ["tracing", "logs"] }
sentry-tower = { version = "0.46.2", features = ["http"] }

# Configuration
dotenvy = "0.15"

# Type generation
ts-rs = { version = "10", features = ["chrono-impl", "serde-json-impl"] }

# Testing
insta = { version = "1", features = ["json"] }
proptest = "1.4"
wiremock = "0.6"
assert_json_diff = "2"
rstest = "0.18"
serial_test = "3"

# Cryptography
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"

# Auth
bcrypt = "0.16"
jsonwebtoken = "9"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "migrate"] }
rmcp = "1.1"

# IDs
cuid2 = "0.1"

# Random number generation
rand = "0.8"

# Vendored Chronicle support crates
arrow = { version = "57", default-features = false, features = ["chrono-tz"] }
datafusion = "52"
kurrentdb = "1"
nohash-hasher = "0.2"
object_store = "0.12"

chronicle_auth = { path = "crates/auth" }
chronicle_integrations = { path = "crates/integrations" }
chronicle_pipedream_connect = { path = "crates/pipedream-connect" }
chronicle_nango = { path = "crates/chronicle_nango" }
