[package]
name = "chronicle_api"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
chronicle_domain = { workspace = true }
chronicle_interfaces = { workspace = true }
chronicle_infra = { workspace = true }
chronicle_mock_connector = { workspace = true }
chronicle_sources_core = { workspace = true }
chronicle_sources_registry = { workspace = true }
chronicle_auth = { workspace = true }
chronicle_pipedream_connect = { workspace = true }
chronicle_nango = { workspace = true }
chronicle_core = { workspace = true }
chronicle_stripe = { workspace = true }
chronicle_store = { workspace = true }
chronicle_query = { workspace = true }
chronicle_link = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
bytes = "1.5"

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Cryptography (for webhook signature verification)
cuid2 = { workspace = true }
