[package]
name = "chronicle_auth"
version.workspace = true
edition.workspace = true

[dependencies]
chronicle_domain = { workspace = true }
chronicle_interfaces = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }

bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
cuid2 = { workspace = true }
ts-rs = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tower = { workspace = true }
