[package]
name = "chronicle_auth"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
chronicle_domain = { workspace = true }
chronicle_interfaces = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }

jsonwebtoken = { workspace = true }
cuid2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
ts-rs = { workspace = true }

# WorkOS HTTP wrapper
reqwest = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tower = { workspace = true }
