[package]
name = "chronicle_gorgias"
description = "Gorgias helpdesk connector for Chronicle. Converts Gorgias webhook events to Chronicle events with automatic entity extraction."
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
chronicle_core = { path = "../chronicle_core" }

chrono.workspace = true
serde_json.workspace = true
