[package]
name = "chronicle_ingest"
description = "Event ingestion pipeline: micro-batching, webhook parsing, schema detection."
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
chronicle_core = { path = "../chronicle_core" }
chronicle_store = { path = "../chronicle_store" }

chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true

[dev-dependencies]
chronicle_test_fixtures = { path = "../chronicle_test_fixtures" }
