[package]
name = "chronicle_mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chronicle_api = { workspace = true }
chronicle_auth = { workspace = true }
chronicle_backend = { workspace = true }
chronicle_core = { workspace = true }
chronicle_domain = { workspace = true }
chronicle_infra = { workspace = true }
chronicle_interfaces = { workspace = true }
chronicle_mock_connector = { workspace = true }
chronicle_store = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rmcp = { workspace = true, features = ["client", "server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }

[dev-dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true, features = ["client", "server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }
