[package]
name = "chronicle_nango"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Typed async Rust client for the Nango REST API"

[lints]
workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
