[package]
name = "chronicle_orchestrator"
description = "Trial + Job orchestration for the Chronicle backtest runtime."
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
chronicle_domain = { workspace = true }
chronicle_interfaces = { workspace = true }
chronicle_sandbox = { workspace = true }

# Async + concurrency
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Serialization (parsing reward files, recipe JSON)
serde = { workspace = true }
serde_json = { workspace = true }

# Time / IDs / errors
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Anthropic LLM-judge HTTP client
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
