[package]
name = "chronicle_py"
description = "Python bindings for Chronicle via PyO3."
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[lib]
name = "chronicle_py"
crate-type = ["cdylib"]

[dependencies]
chronicle_core = { path = "../chronicle_core" }
chronicle_store = { path = "../chronicle_store", features = ["arrow-export"] }
chronicle_gorgias = { path = "../chronicle_gorgias" }
chronicle_stripe = { path = "../chronicle_stripe" }
chronicle_query = { path = "../chronicle_query" }
chronicle_link = { path = "../chronicle_link" }
chronicle_ingest = { path = "../chronicle_ingest" }
chronicle_embed = { path = "../chronicle_embed" }
chronicle_server = { path = "../chronicle_server" }

arrow = { workspace = true, features = ["ipc"] }
async-trait = "0.1"
chrono.workspace = true
pyo3 = { version = "0.21", features = ["extension-module"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
