[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "chronicle"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
