[package]
name = "chronicle_store"
description = "Storage trait abstractions for Chronicle. Backends implement these traits."
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[features]
default = []
arrow-export = ["dep:arrow"]
postgres = ["dep:sqlx"]
hybrid = ["dep:datafusion", "dep:object_store", "postgres", "arrow-export"]
kurrent = ["dep:kurrentdb", "postgres"]
helix = ["dep:helix-rs", "dep:reqwest"]

[dependencies]
chronicle_core = { path = "../chronicle_core" }

arrow = { workspace = true, optional = true }
async-trait = "0.1"
chrono.workspace = true
datafusion = { workspace = true, optional = true }
futures = "0.3"
itoa = "1"
kurrentdb = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }
parking_lot.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true
helix-rs = { version = "0.1.10", optional = true }

[dev-dependencies]
chronicle_test_fixtures = { path = "../chronicle_test_fixtures" }
sqlx = { workspace = true }
tempfile = "3"
wiremock = { workspace = true }
