[package]
name = "chronicle_viewer_common"
description = "Shared viewer widgets for Chronicle: event detail, entity refs, links, payload."
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
chronicle_core = { path = "../chronicle_core" }

chrono.workspace = true
egui = "0.33"
serde_json.workspace = true

[dev-dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
chronicle_test_fixtures = { path = "../chronicle_test_fixtures" }

[[example]]
name = "chronicle_detail_demo"
