[package]
name = "chronicle_infra"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["memory"]
memory = []
kafka = ["rdkafka"]
postgres = ["sqlx", "chronicle_store/postgres"]
full = ["memory", "kafka", "postgres"]

[dependencies]
chronicle_domain = { workspace = true }
chronicle_interfaces = { workspace = true }
chronicle_core = { workspace = true }
chronicle_store = { workspace = true }
chronicle_query = { workspace = true }
chronicle_link = { workspace = true }

serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
cuid2 = { workspace = true }
serde = { workspace = true }
ulid = { workspace = true }

# Optional heavy dependencies
rdkafka = { version = "0.36", optional = true }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid", "json"], optional = true }

[dev-dependencies]
serde_json = { workspace = true }
