[package]
name = "chronicle_integrations"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
chronicle_domain = { workspace = true }
chronicle_interfaces = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
