[package]
name = "chronicle_pipedream_connect"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Typed async Rust client for the Pipedream Connect REST API"
keywords = ["pipedream", "api", "async", "integration"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
